[gd_scene load_steps=9 format=3 uid="uid://dsobjoevgmlbb"]

[ext_resource type="Script" uid="uid://buqr1l0oc2207" path="res://scripts/systems/ShiftSummaryScreen.gd" id="1_lf5e7"]
[ext_resource type="LabelSettings" uid="uid://bnemubwwr558w" path="res://assets/styles/ShiftSummaryHeaderText.tres" id="2_68n1l"]
[ext_resource type="LabelSettings" uid="uid://skp252vibaj1" path="res://assets/styles/ShiftSummaryBodyText.tres" id="3_oti8t"]
[ext_resource type="LabelSettings" uid="uid://2s03ew43w0st" path="res://assets/styles/LeaderboardSummaryBodyText.tres" id="3_se1pp"]
[ext_resource type="PackedScene" uid="uid://dk47bwveebyio" path="res://scripts/systems/PotatoRain.tscn" id="5_oti8t"]
[ext_resource type="Texture2D" uid="uid://q1xxjsehtnrp" path="res://assets/menu/performance_stamp_inactive.png" id="6_4t6eu"]
[ext_resource type="Texture2D" uid="uid://ctef0hoky4rwi" path="res://assets/menu/leaderboard.png" id="6_r15em"]
[ext_resource type="Texture2D" uid="uid://c5ffltpskgqiw" path="res://assets/menu/shift_summary_journal.png" id="7_klx14"]

[node name="ShiftSummaryScreen" type="Control"]
z_index = 100
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lf5e7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="StatsContainer" type="PanelContainer" parent="."]
visible = false
z_index = 13
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 250.0
offset_top = 200.0
offset_right = 890.0
offset_bottom = 560.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="."]
modulate = Color(0.896599, 0.712161, 0.435342, 1)
z_index = 99
z_as_relative = false
layout_mode = 2
offset_left = 192.0
offset_top = 600.0
offset_right = 296.0
offset_bottom = 640.0
scale = Vector2(1.5, 1.5)
text = "Continue"

[node name="RestartButton" type="Button" parent="."]
modulate = Color(0.896599, 0.712161, 0.435342, 1)
z_index = 99
z_as_relative = false
layout_mode = 2
offset_left = 600.0
offset_top = 600.0
offset_right = 664.0
offset_bottom = 640.0
scale = Vector2(1.5, 1.5)
text = "Restart"

[node name="MainMenuButton" type="Button" parent="."]
modulate = Color(0.896599, 0.712161, 0.435342, 1)
z_index = 99
z_as_relative = false
layout_mode = 2
offset_left = 416.0
offset_top = 600.0
offset_right = 496.0
offset_bottom = 640.0
scale = Vector2(1.5, 1.5)
text = "Main Menu"

[node name="SubmitScoreButton" type="Button" parent="."]
modulate = Color(0.896599, 0.712161, 0.435342, 1)
z_index = 99
z_as_relative = false
layout_mode = 2
offset_left = 875.0
offset_top = 600.0
offset_right = 1035.0
offset_bottom = 640.0
scale = Vector2(1.5, 1.5)
text = "Submit Score"

[node name="HeaderPanel" type="VBoxContainer" parent="."]
z_index = 1
layout_mode = 0
offset_left = 170.0
offset_top = 153.0
offset_right = 444.0
offset_bottom = 217.0
alignment = 1

[node name="Title" type="Label" parent="HeaderPanel"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "SHIFT SUMMARY
Endless - Expert"
label_settings = ExtResource("2_68n1l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeaderboardTitlePanel" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 840.0
offset_top = 200.0
offset_right = 1151.0
offset_bottom = 266.0
alignment = 1

[node name="Title" type="Label" parent="LeaderboardTitlePanel"]
z_index = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "Global Leaderboard
Endless - Expert"
label_settings = ExtResource("2_68n1l")
horizontal_alignment = 1

[node name="LeaderboardPanel" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 840.0
offset_top = 248.0
offset_right = 1150.0
offset_bottom = 554.0
alignment = 1

[node name="Entries" type="Label" parent="LeaderboardPanel"]
z_index = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "1    HeartCoded    4,750
2    JuanColacelli    4,600
3    Maaack    4,200
4    Rasterflame    3,980
5    FreshWaterFern    3,540
6    Manodono    3,300
7    CerealDATASync    3,200
8    SolidPlasma    2,700
9    MrBright01    2,350
10    DigitalIliad    2,200
11    beni    1,950
12    2NerdyNerds   1,900"
label_settings = ExtResource("3_se1pp")
horizontal_alignment = 1

[node name="LeftPanel" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 162.0
offset_top = 224.0
offset_right = 452.0
offset_bottom = 540.0

[node name="ShiftComplete" type="Label" parent="LeftPanel"]
z_index = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "SHIFT 289 COMPLETE
YOU LOSE!
"
label_settings = ExtResource("3_oti8t")
horizontal_alignment = 1

[node name="MissileStats" type="Label" parent="LeftPanel"]
z_index = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "RUNNER STATS
Runner Attempts: 15
Missiles Fired: 300
Runners Hit: 3
Perfect Hits: 3
Hit Rate: 1%
"
label_settings = ExtResource("3_oti8t")
horizontal_alignment = 1

[node name="DocumentStats" type="Label" parent="LeftPanel"]
z_index = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "DOCUMENT STATS
Documents Stamped: 22
Potatoes Approved: 8
Potatoes Rejected: 14
Perfect Stamps: 5
"
label_settings = ExtResource("3_oti8t")
horizontal_alignment = 1

[node name="RightPanel" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 502.0
offset_top = 186.0
offset_right = 782.0
offset_bottom = 543.0

[node name="BonusStats" type="Label" parent="RightPanel"]
z_index = 1
layout_mode = 2
text = "BONUSES
Processing Speed Bonus: 1,200
Stamp Accuracy Bonus: 5,000
Perfect Hits Bonus: 2,000
Total Bonus: 8,200"
label_settings = ExtResource("3_oti8t")
horizontal_alignment = 1

[node name="PerformanceStats" type="Label" parent="RightPanel"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "
PERFORMANCE
Time Taken: 6m 5s
Expected Score: 2,000
Total Score: 3,650
Over-Score Percentage: 182%
Performance Rating: 
Exceptional!
	"
label_settings = ExtResource("3_oti8t")
horizontal_alignment = 1

[node name="GradeStamp-1" type="Sprite2D" parent="RightPanel"]
position = Vector2(70, 316)
scale = Vector2(3, 3)
texture = ExtResource("6_4t6eu")

[node name="GradeStamp-2" type="Sprite2D" parent="RightPanel"]
position = Vector2(150, 316)
scale = Vector2(3, 3)
texture = ExtResource("6_4t6eu")

[node name="GradeStamp-3" type="Sprite2D" parent="RightPanel"]
position = Vector2(230, 316)
scale = Vector2(3, 3)
texture = ExtResource("6_4t6eu")

[node name="LeaderboardBackground" type="TextureRect" parent="."]
z_index = 25
z_as_relative = false
layout_mode = 2
offset_left = 832.0
offset_top = 118.0
offset_right = 1160.0
offset_bottom = 592.0
texture = ExtResource("6_r15em")
expand_mode = 1

[node name="StatsJournalBackground" type="TextureRect" parent="."]
z_index = 25
z_as_relative = false
layout_mode = 2
offset_left = 143.0
offset_top = 118.0
offset_right = 813.0
offset_bottom = 597.0
texture = ExtResource("7_klx14")
expand_mode = 1

[node name="PotatoRain" parent="." instance=ExtResource("5_oti8t")]
z_index = 24
z_as_relative = false

[node name="ScreenBackground" type="TextureRect" parent="."]
visible = false
z_index = 1
z_as_relative = false
layout_mode = 0
offset_left = -6.0
offset_top = 20.0
offset_right = 1914.0
offset_bottom = 1100.0
scale = Vector2(0.667597, 0.667597)

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="SubmitScoreButton" to="." method="_on_submit_score_button_pressed"]
